# JumpGame

./: .gitmodules  CMakeLists.txt  todo.txt
include/: App.hpp  Camera.hpp  Character.hpp  Constants.hpp  Platform.hpp  PlatformPool.hpp
src/: App.cpp  Camera.cpp  Character.cpp  Platform.cpp  PlatformPool.cpp  main.cpp
